--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -348,9 +348,17 @@
                 <source>user.form.about</source>
                 <target> تحدث عن نفسك. اذا كنت تريد  أن تكون رفيق موسيقى أضف اهتماماتك الموسيقية</target>
             </trans-unit>
+            <trans-unit id="user.form.about.family">
+                <source>user.form.about.family</source>
+                <target>Berätta om dig och din familj.</target>
+            </trans-unit>
             <trans-unit id="user.form.about.help">
                 <source>user.form.about.help</source>
                 <target>.كمثال.... ماذا تحب أن تفعل؟ من أنت كشخص؟ الدراسة او العمل؟ ما المدة التي قضيتها في السويد؟ أما صديق الموسيقى فتحدث عن الالة التي تعزفها و الموسيقى التي تحبها.اكتب حصرا باللغة السويدية أو الانكليزية</target>
+            </trans-unit>
+            <trans-unit id="user.form.about.family.help">
+                <source>user.form.about.family.help</source>
+                <target>Du anmäler dig som representant för din familj. Vi matchar er främst efter att barnen ska vara i nära åldrar, men vi tittar även på sådant som dina intressen, sysselsättning etc.</target>
             </trans-unit>
             <trans-unit id="user.form.from">
                 <source>user.form.from</source>
@@ -434,6 +442,10 @@
                 <source>user.form.children_age</source>
                 <target>أعمار الأطفال</target>
             </trans-unit>
+            <trans-unit id="user.form.children_age.help">
+                <source>user.form.children_age.help</source>
+                <target>Om du har flera barn, skriv tydligt vilket/vilka som ska följa med till mötet.</target>
+            </trans-unit>
             <trans-unit id="user.form.time_in_sweden">
                 <source>user.form.time_in_sweden</source>
                 <target>?منذ متى وأنت تعيش في السويد</target>
@@ -505,6 +517,10 @@
             <trans-unit id="user.form.button">
                 <source>user.form.button</source>
                 <target>حفظ</target>
+            </trans-unit>
+            <trans-unit id="user.form.register.button">
+                <source>user.form.register.button</source>
+                <target>Klart - skicka min anmälan!</target>
             </trans-unit>
             <trans-unit id="user.settings.header">
                 <source>user.settings.header</source>
@@ -631,6 +647,14 @@
             <trans-unit id="connection_request.form.match.family">
                 <source>connection_request.form.match.family</source>
                 <target>Vill du bli matchad tillsammans med din familj för att träffa en annan barnfamilj?</target>
+            </trans-unit>
+            <trans-unit id="connection_request.form.match.family.yes">
+                <source>connection_request.form.match.family.yes</source>
+                <target>Vi är en barnfamilj som vill träffa en annan barnfamilj</target>
+            </trans-unit>
+            <trans-unit id="connection_request.form.match.family.no">
+                <source>connection_request.form.match.family.no</source>
+                <target>Jag vill anmäla mig själv för att träffa en kompis</target>
             </trans-unit>
             <trans-unit id="connection_request.form.button">
                 <source>connection_request.form.button</source>
