--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -551,7 +551,7 @@
             </trans-unit>
             <trans-unit id="index.intro">
                 <source>index.intro</source>
-                <target>We provide the first contact to a person who you meet 1 time. On this page, you can make a new request to meet a new Fika or Start friend. 
+                <target>We provide the first contact to a person who you meet 1 time. On this page, you can make a new request to meet a new friend. 
                 
                 You can also see Previous meetings and if you already have an Active request.</target>
             </trans-unit>
