--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1172,16 +1172,24 @@
                         <p>
                             <b>Kansli (i alfabetisk ordning)</b><br> 
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
+                            Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
-
+                            <br>
+                            <b>Styrelse</b><br> 
+                            Jörgen Bergqvist, ordförande <br>
+                            Emma Hammar, vice ordförande <br>
+                            Cecilia Holmgren, grundare och sekreterare <br>
+                            Olle Hammar, kassör <br>
+                            Madelene Lindberg, ledamot <br>
+                            Mikael Falgard, suppleant <br>
+                            Martina Iven, suppelant <br>
+                            Valberedning: Noa Bachner <br>
                             <br>
                             <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
-                            Farhad Shams, IT<br>
                             <br>
                             <b>Kompisledare</b><br> 
-                            Helena Rewucha, Kompisledare Göteborg<br> 
                             Robert Thörnqvist, Kompisledare Göteborg<br>
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Helena Wannberg, Kompisledare Örebro<br> 
@@ -1189,15 +1197,15 @@
                             Nienke Bakker, Kompisledare Kalmar<br>
                             <br>
                             <b>Ambassadörer</b><br>  
-                            Cecilia Holmgren, grundare<br> 
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br>
                             Caroline Uggla, grafisk formgivning<br>
                             <br>
                             <b>Eventansvariga</b><br>
-                            Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Olivia Wideroth, teamledare eventansvariga Stockholm<br> 
+                            Elisabeth Rimér-Asplund, eventansvarig Stockholm, (tillfälligt uppehåll)<br> 
+                            Olivia Wideroth, teamledare eventansvariga Stockholm, (tillfälligt uppehåll)<br>
+                            Sidney Pereira Da Silva, eventansvarig Stockholm
                             Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
                     ]]>
