--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1183,7 +1183,7 @@
                             Olle Hammar, kassör <br>
                             Madelene Lindberg, ledamot <br>
                             Mikael Falgard, suppleant <br>
-                            Martina Iven, suppelant <br>
+                            Martina Iven, suppleant <br>
                             Valberedning: Noa Bachner <br>
                             <br>
                             <b>IT</b><br>
