--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1069,30 +1069,40 @@
                         <p>
                             Office (in alphabetical order) <br> 
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
+                            Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
-
-                            IT<br>
+                            <br>
+                            <b>Styrelse</b><br> 
+                            Jörgen Bergqvist, ordförande <br>
+                            Emma Hammar, vice ordförande <br>
+                            Cecilia Holmgren, grundare och sekreterare <br>
+                            Olle Hammar, kassör <br>
+                            Madelene Lindberg, ledamot <br>
+                            Mikael Falgard, suppleant <br>
+                            Martina Iven, suppleant <br>
+                            Valberedning: Noa Bachner <br>
+                            <br>
+                            <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
-                            Farhad Shams, IT<br>
-
-                            Kompisledare<br> 
-                            Helena Rewucha, Kompisledare Göteborg<br> 
+                            <br>
+                            <b>Kompisledare</b><br> 
                             Robert Thörnqvist, Kompisledare Göteborg<br>
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Helena Wannberg, Kompisledare Örebro<br> 
                             Sofia Winroth, Kompisledare Örebro<br>
-                            
-                            Ambassadörer<br>  
-                            Cecilia Holmgren, grundare<br> 
+                            Nienke Bakker, Kompisledare Kalmar<br>
+                            <br>
+                            <b>Ambassadörer</b><br>  
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br>
- 		 	                Caroline Uggla, grafisk formgivning<br>
-                       
-                            Eventansvariga<br> 
-                            Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
-                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>
+                            Caroline Uggla, grafisk formgivning<br>
+                            <br>
+                            <b>Eventansvariga</b><br>
+                            Elisabeth Rimér-Asplund, eventansvarig Stockholm, (tillfälligt uppehåll)<br> 
+                            Olivia Wideroth, teamledare eventansvariga Stockholm, (tillfälligt uppehåll)<br>
+                            Sidney Pereira Da Silva, eventansvarig Stockholm
                             Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
                     ]]>
