--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -638,7 +638,7 @@
             </trans-unit>
             <trans-unit id="connection_request.form.match.family">
                 <source>connection_request.form.match.family</source>
-                <target>Vill du bli matchad med en annan familj?</target>
+                <target>Vill du bli matchad tillsammans med din familj för att träffa en annan barnfamilj?</target>
             </trans-unit>
             <trans-unit id="connection_request.form.button">
                 <source>connection_request.form.button</source>
