--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1129,13 +1129,16 @@
                             Magnus Malmstedt som tagit fram Kompisbyråns fina orangea logga.
                         </p>
                         <p>
-                            Comviq som stöttar Kompisbyråns kansli med mobiltelefoner.
+                            Comviq som stöttar Kompisbyråns kansli med mobiltelefoner 2018.
                         </p>
                         <p>
-                            TS reklam som stått för Kompisbyråns collegetröjor och tygpåsar.
+                            TS reklam som stått för Kompisbyråns collegetröjor och tygpåsar 2018.
                         </p>
                         <p>
-                            inUse som tagit fram en UX-analys av Kompisbyrån anmälningsformulär.  
+                            inUse som tagit fram en UX-analys av Kompisbyrån anmälningsformulär 2018.  
+                        </p>
+                        <p>
+                            Exit Games för att vi på kansliet fick besöka er 2018 - perfekt teambuilding-aktivitet.  
                         </p>
                         <p>
                             och Alberto Nuñez
