--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1058,14 +1058,17 @@
                             Magnus Malmstedt who has created Kompisbyrån's beautiful orange logo.
                         </p>
 			<p>
-                            Comviq that supports Kompisbyrån's office with cell phones.
+                            Comviq that supports Kompisbyrån's office with cell phones 2018.
                         </p>
 			<p>
-                            TS reklam that supports Kompisbyrån with sweatshirts and tote bags.
+                            TS reklam that supports Kompisbyrån with sweatshirts and tote bags 2018.
                         </p>
                         <p>
-                            inUse who's provided Kompisbyrån with a UX-analyse of our registration process
+                            inUse which's provided Kompisbyrån with an UX-analyse of our registration process 2018.
                         </p>	
+                        <p>
+                            Exit Games for the generous visit 2018 - perfect teambuilding activity.
+                        </p>
                         <p>
                         and Alberto Nuñez,
 			Alexandra Arvidson,
