--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -184,7 +184,7 @@
             </trans-unit>
             <trans-unit id="register.create.header">
                 <source>register.create.header</source>
-                <target>Gå med</target>
+                <target>Bli fikakompis</target>
             </trans-unit>
             <trans-unit id="register.create.intro">
                 <source>register.create.intro</source>
