Update list of partners

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1116,12 +1116,8 @@
                             arbetar med att länka samma nya och etablerade svenskar i ett möte på ungefär en timme. ÖppnaDörren medfinansieras av Europeiska socialfonden. 
                         </p>
                         <p>
-                            <strong>Delicato</strong> som är vår huvudsponsor till Fikakompis! Tillsammans vill vi verka för ökad 
-                            gemenskap i det svenska samhället genom fika. 
-                        </p>
-                        <p>
-                            <strong>Startkompis-kommunerna</strong> Nacka, Solna och Tyresö har valt att samarbeta med oss
-                            för att öka gemenskapen lokalt i kommunerna genom vårt program Startkompis.
+                            <strong>Våra samarbetskommuner</strong> Danderyd, Solna och Tyresö som har valt att arbeta tillsammans med oss
+                            för en ökad gemenskap.
                         </p>
                         
                         <h3>Ett särskilt tack till...</h3>
