Update list of partners

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1042,15 +1042,9 @@
                              collaboration is to get even more new and established Swedes to meet in easy and fun ways as part of everyday 
                              life. The work of Kompisbyrån is very well aligned with the rest of the organizations that are part of ÖppnaDörren (Invitationsdepartementet, Svenska med baby och Yrkesdörren), 
                              we all work to create those first meetings between potential new friends. ÖppnaDörren is co-financed by European Social Fund. 
-                        </p>
-                        <p>
-                            <strong>Delicato</strong>, our main sponsor for ”Fikakompis”. Together we want to increase the integration in the Swedish society 
-                             by connecting new friends over a ”fika”.  
                         </p>   
                         <p>
-                            <strong>The municipalities</strong> Nacka, Solna, Tyresö and Vaxholm which we are working with in our program Startkompis 
-                                    (Start Friend). Together we want to provide e greater sense of community by making local friend matches within
-                                    the municipalities. 
+                            <strong>The municipalities</strong> Danderyd, Solna and Tyresö who are working together with us to achieve a greater sense of community.
                         </p>
                         
                         <h3>A special thanks to...</h3>
