Update list of partners

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1051,10 +1051,7 @@
                             <strong>Axfoundation/ÖppnaDörren</strong> 
                         </p>
                         <p>
-                            <strong>Delicato</strong>
-                        </p>
-                        <p>
-                            <strong>The Start Friend municipalities:</strong> Nacka, Solna and Tyresö. 
+                            <strong>The municipalities:</strong> Danderyd, Solna and Tyresö. 
                         </p>
                         <p>
                             شكر خاص ل
