--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1223,11 +1223,12 @@
                             Heydar Sheykhali, ambassadör matchning<br>  
                             Jennifer Silander, ambassadör matchning<br> 
                             Alexander Unge, ambassadör matchning<br>
+                            Paulina Franklin, ambassadör matchning<br>
                             Caroline Uggla, grafisk formgivning<br>
                             <br>
                             <b>Eventansvariga</b><br>
                             Elisabeth Rimér-Asplund, eventansvarig Stockholm, (tillfälligt uppehåll)<br> 
-                            Olivia Wideroth, teamledare eventansvariga Stockholm, (tillfälligt uppehåll)<br>
+                            Olivia Wideroth, teamledare eventansvariga Stockholm<br>
                             Sidney Pereira Da Silva, eventansvarig Stockholm
                             Susanna Bjerke, eventansvarig Örebro<br>
                         </p>
