--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1093,7 +1093,8 @@
                             Office (in alphabetical order) <br> 
                             Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">dalia@kompisbyran.se</a><br>
-                            Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            Emma Hammar, grundare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
+                            Henrik Szabo, verksamhetschef, <a href="mailto:henrik@kompisbyran.se">henrik@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
                             <br>
                             <b>Styrelse</b><br> 
