--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1194,21 +1194,19 @@
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
                             <b>Kansli (i alfabetisk ordning)</b><br> 
-                            Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Dalia Yassin, programansvarig, <a href="mailto:dalia@kompisbyran.se">dalia@kompisbyran.se</a><br>
-                            Emma Hammar, grundare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-                            Henrik Szabo, verksamhetschef, <a href="mailto:henrik@kompisbyran.se">henrik@kompisbyran.se</a><br> 
+                            Emma Hammar, grundare och verksamhetschef, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
+                            Clara Wäppling, projektledare (föräldraledig) <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
+
                             <br>
                             <b>Styrelse</b><br> 
                             Jörgen Bergqvist, ordförande <br>
                             Emma Hammar, vice ordförande <br>
-                            Cecilia Holmgren, grundare och sekreterare <br>
-                            Olle Hammar, kassör <br>
-                            Madelene Lindberg, ledamot <br>
-                            Mikael Falgard, suppleant <br>
-                            Martina Iven, suppleant <br>
-                            Valberedning: Noa Bachner <br>
+                            Emilia Molin, ledamot <br>
+                            Olle Hammar, suppleant <br>
+                            Madelene Lindberg, revisor <br>
+                            Noa Bachner, valberedning <br>
                             <br>
                             <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
@@ -1242,8 +1240,7 @@
                     <![CDATA[
                         <p>
                             Frågor?<br> 
-                            Fikakompis: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>  
-                            Startkompis: <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>   
+                            Fikakompis: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>    
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
                             Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>                             
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>                             
